--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "babel server.js --minify -d dist",
     "back": "nodemon ./server.js"
   },
   "author": "",
@@ -19,5 +20,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "uid": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
