--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "babel server.js --minify -d dist",
-    "back": "nodemon ./server.js"
+    "back": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
